Its got a nav-bar now that kinda works

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    font-family: 'Sansita', sans-serif;
+    margin: 0 2.5% 0 2.5%;
+    background: #293F4F;
+    color: #EEC8B0;
+}
+.buttons{    
+    background: #C4746C;
+    border-radius: 10px;
+}
