The basic layout is here

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class = "home">
-    <h1>Welcome to Campus Navigator</h1>
-    <p>Campus Navigator is a project designed to give new metro students an easy way to determine their class locations by uploading their class schedule.</p>
-    <h1>How do I use campus navigator?</h1>
-    <button class = "buttons">Learn More</button>
+    <h1 class = "largeGap">Welcome to Campus Navigator</h1>
+    <p class = "largeGap">Campus Navigator is a project designed to give new metro students an easy way to determine <br>how to get to their class locations by uploading their class schedule.</p>
+    <h1 class = "largeGap">How do I use campus navigator?</h1>
+    <button routerLink = "/about" (click) = "select('About')" class = "buttons">Learn More</button>
 </div>
