--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,13 +1,7 @@
-.buttons{
-    font-size: 30px;
-    padding: 10px 30px 10px 30px;
-    color: inherit;
-    font-family: inherit;
-    border-style: none;
-}
-p {
-    font-size: 18px;
-}
+
 .home{
     text-align: center;
+}
+.largeGap{
+    padding: 100px 0 0 0;
 }
