--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,22 @@ body{
     background: #C4746C;
     border-radius: 10px;
 }
+a{
+    color: #EEC8B0;
+}
+p {
+    
+    font-size: 24px;
+}
+.buttons{
+    font-size: 30px;
+    padding: 10px 30px 10px 30px;
+    color: inherit;
+    font-family: inherit;
+    border-style: none;
+    outline: none;
+}
+.buttons>img{
+    height: 22px;
+    width: 22px;
+}
