--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -1,6 +1,6 @@
 .upper-container{
     margin: 0 10% 0 10%;
-    padding: 50px 10% 50px 10%;
+    padding: 50px;
     background: #716D75;
     border-radius: 15px;
 }
@@ -55,8 +55,14 @@
     margin-block-end: 0;
     margin-block-start: 0;
 }
-.day, .buttons{
+.day{
     margin: 10px;
+}
+.buttons{
+    margin-left: 10px;
+}
+.buttons:last-child{
+    margin-right:10px;
 }
 .class-body>li {
     text-align: none;
